--- a/src/notebooks/01-tracking_quickstart.ipynb
+++ b/src/notebooks/01-tracking_quickstart.ipynb
@@ -19,13 +19,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:28:07.790532Z",
-     "start_time": "2025-05-10T13:28:07.744631Z"
+     "end_time": "2025-05-15T12:12:46.646889Z",
+     "start_time": "2025-05-15T12:12:46.640987Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from pandas.core.common import random_state\n",
     "%env AWS_ACCESS_KEY_ID=admin\n",
     "%env AWS_SECRET_ACCESS_KEY=admin123\n",
     "%env MLFLOW_S3_ENDPOINT_URL=http://localhost:9000\n"
@@ -41,14 +40,14 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:28:07.870163Z",
-     "start_time": "2025-05-10T13:28:07.863743Z"
+     "end_time": "2025-05-15T12:12:48.923310Z",
+     "start_time": "2025-05-15T12:12:46.801988Z"
     }
    },
    "source": [
@@ -63,7 +62,7 @@
     "from mlflow.models import infer_signature"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -82,8 +81,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:28:07.888986Z",
-     "start_time": "2025-05-10T13:28:07.886274Z"
+     "end_time": "2025-05-15T12:12:48.931140Z",
+     "start_time": "2025-05-15T12:12:48.929652Z"
     }
    },
    "source": [
@@ -92,7 +91,7 @@
     "mlflow.set_tracking_uri(uri=\"http://localhost:5000\")"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -109,8 +108,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:28:28.939151Z",
-     "start_time": "2025-05-10T13:28:28.907193Z"
+     "end_time": "2025-05-15T12:12:48.958768Z",
+     "start_time": "2025-05-15T12:12:48.942561Z"
     }
    },
    "source": [
@@ -145,7 +144,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -161,24 +160,31 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:28:33.861054Z",
-     "start_time": "2025-05-10T13:28:33.685255Z"
+     "end_time": "2025-05-15T12:12:49.035643Z",
+     "start_time": "2025-05-15T12:12:48.974264Z"
     }
    },
    "source": "mlflow.set_experiment(\"MLflow Iris\")",
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/05/15 14:12:49 INFO mlflow.tracking.fluent: Experiment with name 'MLflow Iris' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='s3://mlflow-artifacts/2', creation_time=1746882135784, experiment_id='2', last_update_time=1746882135784, lifecycle_stage='active', name='MLflow Iris', tags={}>"
+       "<Experiment: artifact_location='s3://mlflow-artifacts/1', creation_time=1747311169008, experiment_id='1', last_update_time=1747311169008, lifecycle_stage='active', name='MLflow Iris', tags={}>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -193,11 +199,17 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:29:04.601891Z",
-     "start_time": "2025-05-10T13:28:35.319869Z"
+     "end_time": "2025-05-15T12:12:52.220584Z",
+     "start_time": "2025-05-15T12:12:49.052119Z"
     }
    },
    "source": [
+    "params = {\n",
+    "    \"solver\": \"lbfgs\",\n",
+    "    \"max_iter\": 1000,\n",
+    "    \"multi_class\": \"auto\",\n",
+    "    \"random_state\": 8888\n",
+    "}\n",
     "# Start an MLflow run\n",
     "with mlflow.start_run():\n",
     "    # Log the hyperparameters\n",
@@ -226,27 +238,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Registered model 'tracking-iris' already exists. Creating a new version of this model...\n",
-      "2025/05/10 15:29:04 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-iris, version 2\n"
+      "INFO:botocore.credentials:Found credentials in environment variables.\n",
+      "Successfully registered model 'tracking-iris'.\n",
+      "2025/05/15 14:12:52 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-iris, version 1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run fun-crab-931 at: http://localhost:5000/#/experiments/2/runs/3825531f541e4808b4bf5dccdb9b1e12\n",
-      "🧪 View experiment at: http://localhost:5000/#/experiments/2\n"
+      "🏃 View run resilient-wolf-187 at: http://localhost:5000/#/experiments/1/runs/fe5298b354e2413585cb062fb67d2963\n",
+      "🧪 View experiment at: http://localhost:5000/#/experiments/1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created version '2' of model 'tracking-iris'.\n"
+      "Created version '1' of model 'tracking-iris'.\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -261,15 +274,30 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:29:09.132133Z",
-     "start_time": "2025-05-10T13:29:09.031788Z"
+     "end_time": "2025-05-15T12:12:52.387573Z",
+     "start_time": "2025-05-15T12:12:52.232586Z"
     }
    },
    "source": [
     "loaded_model = mlflow.pyfunc.load_model(model_info.model_uri)"
    ],
-   "outputs": [],
-   "execution_count": 17
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9f5d32b474044c7ebabd71c95e0777a5"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -282,8 +310,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T13:29:12.183843Z",
-     "start_time": "2025-05-10T13:29:12.176712Z"
+     "end_time": "2025-05-15T12:12:52.409492Z",
+     "start_time": "2025-05-15T12:12:52.398205Z"
     }
    },
    "source": [
@@ -387,12 +415,12 @@
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 8
   }
  ],
  "metadata": {
