reformat code and pre commit.

--- a/src/notebooks/01-tracking_quickstart.ipynb
+++ b/src/notebooks/01-tracking_quickstart.ipynb
@@ -17,81 +17,56 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:46.646889Z",
-     "start_time": "2025-05-15T12:12:46.640987Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
    "source": [
     "%env AWS_ACCESS_KEY_ID=admin\n",
     "%env AWS_SECRET_ACCESS_KEY=admin123\n",
-    "%env MLFLOW_S3_ENDPOINT_URL=http://localhost:9000\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: AWS_ACCESS_KEY_ID=admin\n",
-      "env: AWS_SECRET_ACCESS_KEY=admin123\n",
-      "env: MLFLOW_S3_ENDPOINT_URL=http://localhost:9000\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+    "%env MLFLOW_S3_ENDPOINT_URL=http://localhost:9000"
+   ]
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:48.923310Z",
-     "start_time": "2025-05-15T12:12:46.801988Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import os\n",
+    "import mlflow\n",
     "import pandas as pd\n",
+    "from mlflow.models import infer_signature\n",
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "import mlflow\n",
-    "from mlflow.models import infer_signature"
-   ],
-   "outputs": [],
-   "execution_count": 2
+    "from sklearn.model_selection import train_test_split"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set the MLflow Tracking URI \n",
+    "### Set the MLflow Tracking URI\n",
     "\n",
-    "Depending on where you are running this notebook, your configuration may vary for how you initialize the interface with the MLflow Tracking Server. \n",
+    "Depending on where you are running this notebook, your configuration may vary for how you initialize the interface with the MLflow Tracking Server.\n",
     "\n",
-    "For this example, we're using a locally running tracking server, but other options are available (The easiest is to use the free managed service within the [Databricks Free Trial](https://mlflow.org/docs/latest/getting-started/databricks-trial.html)). \n",
+    "For this example, we're using a locally running tracking server, but other options are available (The easiest is to use the free managed service within the [Databricks Free Trial](https://mlflow.org/docs/latest/getting-started/databricks-trial.html)).\n",
     "\n",
     "Please see [the guide to running notebooks here](https://www.mlflow.org/docs/latest/getting-started/running-notebooks/) for more information on setting the tracking server uri and configuring access to either managed or self-managed MLflow tracking servers."
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:48.931140Z",
-     "start_time": "2025-05-15T12:12:48.929652Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# NOTE: review the links mentioned above for guidance on connecting to a managed tracking server, such as the Databricks Managed MLflow\n",
     "\n",
     "mlflow.set_tracking_uri(uri=\"http://localhost:5000\")"
-   ],
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,19 +74,16 @@
    "source": [
     "## Load training data and train a simple model\n",
     "\n",
-    "For our quickstart, we're going to be using the familiar iris dataset that is included in scikit-learn. Following the split of the data, we're going to train a simple logistic regression classifier on the training data and calculate some error metrics on our holdout test data. \n",
+    "For our quickstart, we're going to be using the familiar iris dataset that is included in scikit-learn. Following the split of the data, we're going to train a simple logistic regression classifier on the training data and calculate some error metrics on our holdout test data.\n",
     "\n",
     "Note that the only MLflow-related activities in this portion are around the fact that we're using a `param` dictionary to supply our model's hyperparameters; this is to make logging these settings easier when we're ready to log our model and its associated metadata."
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:48.958768Z",
-     "start_time": "2025-05-15T12:12:48.942561Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the Iris dataset\n",
     "X, y = datasets.load_iris(return_X_y=True)\n",
@@ -120,12 +92,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=8888)\n",
     "\n",
     "# Train the model\n",
-    "lr = LogisticRegression(\n",
-    "    solver=\"lbfgs\",\n",
-    "    max_iter=1000,\n",
-    "    multi_class=\"auto\",\n",
-    "    random_state=8888\n",
-    ")\n",
+    "lr = LogisticRegression(solver=\"lbfgs\", max_iter=1000, multi_class=\"auto\", random_state=8888)\n",
     "lr.fit(X_train, y_train)\n",
     "\n",
     "# Predict on the test set\n",
@@ -133,18 +100,7 @@
     "\n",
     "# Calculate accuracy as a target loss metric\n",
     "accuracy = accuracy_score(y_test, y_pred)"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Gustavo.Marin/BA/playground/mlflow-poc/.venv/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,39 +108,18 @@
    "source": [
     "## Define an MLflow Experiment\n",
     "\n",
-    "In order to group any distinct runs of a particular project or idea together, we can define an Experiment that will group each iteration (runs) together. \n",
+    "In order to group any distinct runs of a particular project or idea together, we can define an Experiment that will group each iteration (runs) together.\n",
     "Defining a unique name that is relevant to what we're working on helps with organization and reduces the amount of work (searching) to find our runs later on."
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:49.035643Z",
-     "start_time": "2025-05-15T12:12:48.974264Z"
-    }
-   },
-   "source": "mlflow.set_experiment(\"MLflow Iris\")",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/05/15 14:12:49 INFO mlflow.tracking.fluent: Experiment with name 'MLflow Iris' does not exist. Creating a new experiment.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='s3://mlflow-artifacts/1', creation_time=1747311169008, experiment_id='1', last_update_time=1747311169008, lifecycle_stage='active', name='MLflow Iris', tags={}>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 5
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlflow.set_experiment(\"MLflow Iris\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,18 +132,15 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:52.220584Z",
-     "start_time": "2025-05-15T12:12:49.052119Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "params = {\n",
     "    \"solver\": \"lbfgs\",\n",
     "    \"max_iter\": 1000,\n",
     "    \"multi_class\": \"auto\",\n",
-    "    \"random_state\": 8888\n",
+    "    \"random_state\": 8888,\n",
     "}\n",
     "# Start an MLflow run\n",
     "with mlflow.start_run():\n",
@@ -232,34 +164,7 @@
     "        input_example=X_train,\n",
     "        registered_model_name=\"tracking-iris\",\n",
     "    )"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:botocore.credentials:Found credentials in environment variables.\n",
-      "Successfully registered model 'tracking-iris'.\n",
-      "2025/05/15 14:12:52 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-iris, version 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🏃 View run resilient-wolf-187 at: http://localhost:5000/#/experiments/1/runs/fe5298b354e2413585cb062fb67d2963\n",
-      "🧪 View experiment at: http://localhost:5000/#/experiments/1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Created version '1' of model 'tracking-iris'.\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,32 +177,12 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:52.387573Z",
-     "start_time": "2025-05-15T12:12:52.232586Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "loaded_model = mlflow.pyfunc.load_model(model_info.model_uri)"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9f5d32b474044c7ebabd71c95e0777a5"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 7
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,12 +193,9 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T12:12:52.409492Z",
-     "start_time": "2025-05-15T12:12:52.398205Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "predictions = loaded_model.predict(X_test)\n",
     "\n",
@@ -328,102 +210,19 @@
     "# Add the model predictions to the DataFrame\n",
     "result[\"predicted_class\"] = predictions\n",
     "\n",
-    "result[:4]"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                5.6               2.7                4.2               1.3   \n",
-       "1                4.7               3.2                1.3               0.2   \n",
-       "2                6.7               3.0                5.0               1.7   \n",
-       "3                6.0               3.0                4.8               1.8   \n",
-       "\n",
-       "   actual_class  predicted_class  \n",
-       "0             1                1  \n",
-       "1             0                0  \n",
-       "2             1                2  \n",
-       "3             2                2  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "      <th>actual_class</th>\n",
-       "      <th>predicted_class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 8
+    "result"
+   ]
   }
  ],
  "metadata": {
+  "execution": {
+   "iopub_status": {}
+  },
+  "jupytext": {
+   "cell_metadata_filter": "all,-pycharm",
+   "formats": "ipynb,py:percent",
+   "notebook_metadata_filter": "all,-pycharm"
+  },
   "kernelspec": {
    "display_name": "mlflow-dev-env",
    "language": "python",
