--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -1,86 +1,93 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Testing calls to model server",
-   "id": "853332082e7db3f3"
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "## Testing calls to model server"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Setup for Seldom MLflow custom model server",
-   "id": "4ae30b33ec15ffdc"
+   "id": "1",
+   "metadata": {},
+   "source": [
+    "#### Setup for Seldom MLflow custom model server"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
    "source": [
     "# Config for diabetes-model-server\n",
-    "%env MODEL_SERVER_URL=http://localhost:7000\n",
-    "%env MODEL_NAME=mlflow-model\n",
-    "\n"
-   ],
-   "id": "960064500543574",
-   "outputs": [],
-   "execution_count": null
+    "%env MODEL_SERVER_URL=http: // localhost:7000\n",
+    "%env MODEL_NAME=mlflow-model"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "docker-compose up -d diabetes-model-server\n"
-   ],
-   "id": "c7f099b4756a3e32",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Setup for Seldom mlserver",
-   "id": "121fed35519a78d3"
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "### Setup for Seldom mlserver"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Config for mlserver (Seldon.IO container)\n",
     "%env MODEL_SERVER_URL=http://localhost:8080\n",
     "%env MODEL_NAME=diabetes-model"
-   ],
-   "id": "c7b002199ed09501",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "docker-compose up -d mlserver\n"
-   ],
-   "id": "1ad89827b27d5a51",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Calls to server",
-   "id": "540faf59c01e97e5"
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "### Calls to server"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.099537Z",
-     "start_time": "2025-05-15T11:15:23.827935Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -99,106 +106,25 @@
     "             }\n",
     "           ]\n",
     "         }' | jq\n"
-   ],
-   "id": "5956af9a1fc5ceab",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"model_name\": \"diabetes-model\",\n",
-      "  \"id\": \"054614cf-f1fb-4691-b44d-c0eeaf43d292\",\n",
-      "  \"parameters\": {\n",
-      "    \"content_type\": \"np\"\n",
-      "  },\n",
-      "  \"outputs\": [\n",
-      "    {\n",
-      "      \"name\": \"output-1\",\n",
-      "      \"shape\": [\n",
-      "        2,\n",
-      "        1\n",
-      "      ],\n",
-      "      \"datatype\": \"FP64\",\n",
-      "      \"parameters\": {\n",
-      "        \"content_type\": \"np\"\n",
-      "      },\n",
-      "      \"data\": [\n",
-      "        187.53314700070217,\n",
-      "        186.97810774171552\n",
-      "      ]\n",
-      "    }\n",
-      "  ]\n",
-      "}\n"
-     ]
-    }
-   ],
-   "execution_count": 65
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.142609Z",
-     "start_time": "2025-05-15T11:15:24.108514Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "curl -X GET -s \"${MODEL_SERVER_URL}/v2/models/${MODEL_NAME}\" | jq\n"
-   ],
-   "id": "2e6ef40b0f44451c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"name\": \"diabetes-model\",\n",
-      "  \"versions\": [],\n",
-      "  \"platform\": \"\",\n",
-      "  \"inputs\": [\n",
-      "    {\n",
-      "      \"name\": \"input-0\",\n",
-      "      \"datatype\": \"FP64\",\n",
-      "      \"shape\": [\n",
-      "        -1,\n",
-      "        10\n",
-      "      ],\n",
-      "      \"parameters\": {\n",
-      "        \"content_type\": \"np\"\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"outputs\": [\n",
-      "    {\n",
-      "      \"name\": \"output-0\",\n",
-      "      \"datatype\": \"FP64\",\n",
-      "      \"shape\": [\n",
-      "        -1\n",
-      "      ],\n",
-      "      \"parameters\": {\n",
-      "        \"content_type\": \"np\"\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"parameters\": {\n",
-      "    \"content_type\": \"np\"\n",
-      "  }\n",
-      "}\n"
-     ]
-    }
-   ],
-   "execution_count": 66
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.227694Z",
-     "start_time": "2025-05-15T11:15:24.159253Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "curl -s -X POST ${MODEL_SERVER_URL}/invocations \\\n",
@@ -214,117 +140,76 @@
     "      }' \\\n",
     "  | jq\n",
     "\n"
-   ],
-   "id": "9704ed1d2c63eb48",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"predictions\": [\n",
-      "    187.53314700070217,\n",
-      "    93.96267376859655\n",
-      "  ]\n",
-      "}\n"
-     ]
-    }
-   ],
-   "execution_count": 67
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "##### Force model unload/load with curl",
-   "id": "587e7b3f790c2a5a"
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "##### Force model unload/load with curl"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.299953Z",
-     "start_time": "2025-05-15T11:15:24.240664Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "curl -s  -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/unload\"\n"
-   ],
-   "id": "fd4c8269082c66a2",
-   "outputs": [],
-   "execution_count": 68
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.685170Z",
-     "start_time": "2025-05-15T11:15:24.308048Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "curl -s -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/load\" | jq\n"
-   ],
-   "id": "adcf7a22efdb52ac",
-   "outputs": [],
-   "execution_count": 69
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Check model status with repository index call",
-   "id": "600e87b14fb370c7"
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "Check model status with repository index call"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.717244Z",
-     "start_time": "2025-05-15T11:15:24.692559Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "curl -s -X POST \"${MODEL_SERVER_URL}/v2/repository/index\" \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -d \"{}\" | jq"
-   ],
-   "id": "75d3db9bdde8a98b",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "  {\n",
-      "    \"name\": \"diabetes-model\",\n",
-      "    \"state\": \"READY\",\n",
-      "    \"reason\": \"\"\n",
-      "  }\n",
-      "]\n"
-     ]
-    }
-   ],
-   "execution_count": 70
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Using Custom docker container model-server",
-   "id": "1313df2126bfc5c2"
+   "id": "16",
+   "metadata": {},
+   "source": [
+    "#### Using Custom docker container model-server"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.761049Z",
-     "start_time": "2025-05-15T11:15:24.726037Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -340,59 +225,32 @@
     "        }\n",
     "      }' \\\n",
     "  | jq\n"
-   ],
-   "id": "5baf78b6c6b3f4fb",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"predictions\": [\n",
-      "    187.53314700070217,\n",
-      "    112.54862853914825\n",
-      "  ]\n",
-      "}\n"
-     ]
-    }
-   ],
-   "execution_count": 71
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-15T11:15:24.794915Z",
-     "start_time": "2025-05-15T11:15:24.770643Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "curl -s -X POST \"${MODEL_SERVER_URL}/v2/repository/index\" \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -d \"{}\" | jq\n"
-   ],
-   "id": "8e1cfcb8ac144721",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "  {\n",
-      "    \"name\": \"diabetes-model\",\n",
-      "    \"state\": \"READY\",\n",
-      "    \"reason\": \"\"\n",
-      "  }\n",
-      "]\n"
-     ]
-    }
-   ],
-   "execution_count": 72
+   ]
   }
  ],
  "metadata": {
+  "execution": {
+   "iopub_status": {}
+  },
+  "jupytext": {
+   "cell_metadata_filter": "all,-pycharm",
+   "formats": "ipynb,py:percent",
+   "notebook_metadata_filter": "all,-pycharm"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
