add dagster job and trigger from notebook.

--- a/src/notebooks/02-diabetes-model.ipynb
+++ b/src/notebooks/02-diabetes-model.ipynb
@@ -36,9 +36,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -122,8 +120,7 @@
     "model_name = \"diabetes-model\"\n",
     "\n",
     "mlflow_client = MlflowClient(\n",
-    "    tracking_uri=os.getenv(\"MLFLOW_TRACKING_URI\"),\n",
-    "    registry_uri=os.getenv(\"MLFLOW_TRACKING_URI\"),\n",
+    "    tracking_uri=os.getenv(\"MLFLOW_TRACKING_URI\"), registry_uri=os.getenv(\"MLFLOW_TRACKING_URI\")\n",
     ")\n",
     "\n",
     "mlflow.set_tracking_uri(uri=os.getenv(\"MLFLOW_TRACKING_URI\"))\n",
@@ -148,10 +145,7 @@
    "outputs": [],
    "source": [
     "def compare_metrics(\n",
-    "    client: MlflowClient,\n",
-    "    current_run_id: str,\n",
-    "    baseline_run_id: str,\n",
-    "    metrics_to_compare: Dict[str, str],\n",
+    "    client: MlflowClient, current_run_id: str, baseline_run_id: str, metrics_to_compare: Dict[str, str]\n",
     "):\n",
     "    \"\"\"\n",
     "    Compare the performance of two runs based on given metrics.\n",
@@ -375,9 +369,7 @@
     "# Create a parent run for all the attempts\n",
     "with mlflow.start_run(run_name=generate_random_run_name()) as parent_run:\n",
     "    # Enable MLflow's automatic experiment tracking for scikit-learn\n",
-    "    mlflow.sklearn.autolog(\n",
-    "        log_models=False,  # Model is logged separately below\n",
-    "    )\n",
+    "    mlflow.sklearn.autolog(log_models=False)  # Model is logged separately below\n",
     "\n",
     "    print(f\"Starting hyperparameter search under parent run {parent_run.info.run_id}\")\n",
     "\n",
@@ -422,11 +414,7 @@
     "            current_mae = mean_absolute_error(y_test, y_pred)\n",
     "            current_r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "            current_metrics = {\n",
-    "                \"test_rmse\": current_rmse,\n",
-    "                \"test_mae\": current_mae,\n",
-    "                \"test_r2\": current_r2,\n",
-    "            }\n",
+    "            current_metrics = {\"test_rmse\": current_rmse, \"test_mae\": current_mae, \"test_r2\": current_r2}\n",
     "\n",
     "            mlflow.log_metrics(current_metrics, run_id=child_run.info.run_id)\n",
     "            mlflow.log_metrics(current_metrics, run_id=parent_run.info.run_id, step=attempt)\n",
@@ -452,11 +440,7 @@
     "                mlflow_client,\n",
     "                child_run.info.run_id,\n",
     "                latest_run.info.run_id,\n",
-    "                {\n",
-    "                    \"test_r2\": \"higher\",\n",
-    "                    \"test_rmse\": \"lower\",\n",
-    "                    \"test_mae\": \"lower\",\n",
-    "                },\n",
+    "                {\"test_r2\": \"higher\", \"test_rmse\": \"lower\", \"test_mae\": \"lower\"},\n",
     "            )\n",
     "\n",
     "            # Print improvement status\n",
@@ -515,10 +499,7 @@
     "from ipywidgets import Checkbox\n",
     "\n",
     "skip_inference = Checkbox(\n",
-    "    value=os.environ[\"SKIP_INFERENCE\"].lower() == \"true\",\n",
-    "    description=\"Skip inference\",\n",
-    "    disabled=False,\n",
-    "    indent=False,\n",
+    "    value=os.environ[\"SKIP_INFERENCE\"].lower() == \"true\", description=\"Skip inference\", disabled=False, indent=False\n",
     ")\n",
     "\n",
     "skip_inference"
@@ -550,9 +531,7 @@
     "%%skip $skip_inference.value\n",
     "\n",
     "latest_version_info = mlflow_client.get_model_version_by_alias(model_name, \"dev\")\n",
-    "print(\n",
-    "    f\"Latest model version: {latest_version_info.version}. Alias: {latest_version_info.aliases}\"\n",
-    ")\n",
+    "print(f\"Latest model version: {latest_version_info.version}. Alias: {latest_version_info.aliases}\")\n",
     "\n",
     "# model_uri =\"models:/diabetes-model@dev\"\n",
     "model_uri = f\"models:/{model_name}/{latest_version_info.version}\"\n",
@@ -660,9 +639,7 @@
     "\n",
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
-    "    json={\n",
-    "        \"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": [row]}\n",
-    "    },\n",
+    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": [row]}},\n",
     ")\n",
     "\n",
     "print(json.dumps(response.json(), indent=4))"
@@ -680,21 +657,11 @@
     "%%skip $skip_inference.value\n",
     "\n",
     "# select first/last rows\n",
-    "first_last = pd.concat(\n",
-    "    [\n",
-    "        diabetes_result.iloc[[0]],\n",
-    "        diabetes_result.iloc[[-1]],\n",
-    "    ]\n",
-    ")\n",
+    "first_last = pd.concat([diabetes_result.iloc[[0]], diabetes_result.iloc[[-1]]])\n",
     "\n",
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
-    "    json={\n",
-    "        \"dataframe_split\": {\n",
-    "            \"columns\": diabetes_result.columns.to_list(),\n",
-    "            \"data\": first_last.values.tolist(),\n",
-    "        }\n",
-    "    },\n",
+    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": first_last.values.tolist()}},\n",
     ")\n",
     "\n",
     "print(json.dumps(response.json(), indent=4))"
@@ -715,14 +682,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%skip $skip_inference.value\n",
+    "\n",
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
-    "    json={\n",
-    "        \"dataframe_split\": {\n",
-    "            \"columns\": diabetes_result.columns.to_list(),\n",
-    "            \"data\": diabetes_result.values.tolist(),\n",
-    "        }\n",
-    "    },\n",
+    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": diabetes_result.values.tolist()}},\n",
     ")\n",
     "response_data = response.json()\n",
     "# print(json.dumps(response_data, indent=4))\n",
