--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -5,12 +5,96 @@
    "id": "0",
    "metadata": {},
    "source": [
+    "## Calls to Dagster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Function to wait for completion\n",
+    "def wait_for_job_completion(run_id, timeout=3600, poll_interval=5):\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    while True:\n",
+    "        # Check if timeout reached\n",
+    "        if time.time() - start_time > timeout:\n",
+    "            raise TimeoutError(f\"Job {run_id} did not complete within {timeout} seconds\")\n",
+    "\n",
+    "        try:\n",
+    "            status = client.get_run_status(run_id)\n",
+    "            if status == DagsterRunStatus.SUCCESS:\n",
+    "                return True, status\n",
+    "            elif status in [DagsterRunStatus.FAILURE, DagsterRunStatus.CANCELED]:\n",
+    "                return False, status\n",
+    "            else:\n",
+    "                print(f\"Job status: {status}. Waiting...\")\n",
+    "                time.sleep(poll_interval)\n",
+    "\n",
+    "        except DagsterGraphQLClientError as exc:\n",
+    "            print(f\"Error checking job status: {exc}\")\n",
+    "            raise exc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "from dagster import DagsterRunStatus\n",
+    "from dagster_graphql import DagsterGraphQLClient\n",
+    "from dagster_graphql import DagsterGraphQLClientError\n",
+    "\n",
+    "client = DagsterGraphQLClient(\"localhost\", port_number=3000)\n",
+    "\n",
+    "# Wait for the job to complete\n",
+    "try:\n",
+    "    new_run_id: str = client.submit_job_execution(\n",
+    "        \"train_diabetes_model_job\",  # Your job name\n",
+    "        repository_location_name=\"src.dagster_job.repository\",  # Location from your error\n",
+    "        run_config={},\n",
+    "    )\n",
+    "\n",
+    "    print(f\"Job submitted with run_id: {new_run_id}\")\n",
+    "\n",
+    "    success, status = wait_for_job_completion(new_run_id)\n",
+    "    if success:\n",
+    "        print(\"Job completed successfully!\")\n",
+    "    else:\n",
+    "        print(f\"Job failed with status: {status}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error while waiting for job completion: {e}\")\n",
+    "    raise\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
     "## Testing calls to model server"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1",
+   "id": "4",
    "metadata": {},
    "source": [
     "#### Setup for Seldom MLflow custom model server"
@@ -19,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -33,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "7",
    "metadata": {},
    "source": [
     "### Setup for Seldom mlserver"
@@ -53,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "10",
    "metadata": {},
    "source": [
     "### Calls to server"
@@ -85,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "source": [
     "##### Force model unload/load with curl"
@@ -153,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "source": [
     "Check model status with repository index call"
@@ -185,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "19",
    "metadata": {},
    "source": [
     "#### Using Custom docker container model-server"
@@ -207,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,21 +336,21 @@
    "notebook_metadata_filter": "all,-pycharm"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
