fail dagster on mlflow run failure.

--- a/src/notebooks/02-diabetes-model.ipynb
+++ b/src/notebooks/02-diabetes-model.ipynb
@@ -76,7 +76,10 @@
    "execution_count": null,
    "id": "6",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "tags": [
+     "parameters"
+    ]
    },
    "outputs": [],
    "source": [
@@ -365,13 +368,17 @@
     "min_samples_leaf_range = (1, 100)\n",
     "\n",
     "max_search_attempts = 5\n",
+    "import scrapbook as sb\n",
     "\n",
     "# Create a parent run for all the attempts\n",
     "with mlflow.start_run(run_name=generate_random_run_name()) as parent_run:\n",
+    "\n",
     "    # Enable MLflow's automatic experiment tracking for scikit-learn\n",
     "    mlflow.sklearn.autolog(log_models=False)  # Model is logged separately below\n",
     "\n",
     "    print(f\"Starting hyperparameter search under parent run {parent_run.info.run_id}\")\n",
+    "    # Record the run ID using scrapbook\n",
+    "    sb.glue(\"mlflow_run_id\", parent_run.info.run_id)\n",
     "\n",
     "    best_run = None\n",
     "    improvement_found = False\n",
