add docker build operation to dagster job.

--- a/src/notebooks/02-diabetes-model.ipynb
+++ b/src/notebooks/02-diabetes-model.ipynb
@@ -98,7 +98,7 @@
     "skip_inference = os.environ[\"SKIP_INFERENCE\"].lower() == \"true\"\n",
     "\n",
     "# For inference\n",
-    "os.environ.setdefault(\"MODEL_SERVER_URL\", \"http://localhost:8080\")\n",
+    "os.environ.setdefault(\"MODEL_SERVER_URL\", \"http://localhost:7000\")\n",
     "model_server_url = os.environ[\"MODEL_SERVER_URL\"]"
    ]
   },
@@ -378,7 +378,7 @@
     "\n",
     "    print(f\"Starting hyperparameter search under parent run {parent_run.info.run_id}\")\n",
     "    # Record the run ID using scrapbook\n",
-    "    sb.glue(\"mlflow_run_id\", parent_run.info.run_id)\n",
+    "    sb.glue(\"mlflow_parent_run_id\", parent_run.info.run_id)\n",
     "\n",
     "    best_run = None\n",
     "    improvement_found = False\n",
@@ -467,6 +467,9 @@
     "        model_version = mlflow.register_model(model_uri, model_name)\n",
     "        mlflow_client.set_registered_model_alias(name=model_name, alias=\"dev\", version=model_version.version)\n",
     "        latest_run = best_run\n",
+    "        # Record the run ID with the model registered using scrapbook\n",
+    "        sb.glue(\"mlflow_model_run_id\", best_run.info.run_id)\n",
+    "\n",
     "        print(f\"Model registered as '{model_name}' version {model_version.version}\")\n",
     "    else:\n",
     "        print(f\"\\n🔴 No improvement found after {max_search_attempts} attempts\")\n",
@@ -623,8 +626,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "28",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "dataset = datasets.load_diabetes()\n",
+    "\n",
+    "diabetes_result = pd.DataFrame(dataset[\"data\"], columns=dataset[\"feature_names\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29",
    "metadata": {},
    "source": [
     "Make a single prediction"
@@ -633,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -655,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -676,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "source": [
     "Make prediction for all rows in a dataframe"
@@ -685,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "source": [
     "Check model server status"
@@ -715,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "source": [
     "Force a model reload with latest version"
@@ -736,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "source": [
     "Force a model reload on model server"
@@ -745,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
