--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -28,6 +28,8 @@
     "from dagster_graphql import DagsterGraphQLClientError\n",
     "\n",
     "# Function to wait for completion\n",
+    "\n",
+    "\n",
     "def wait_for_job_completion(run_id, timeout=3600, poll_interval=5):\n",
     "    start_time = time.time()\n",
     "\n",
@@ -58,7 +60,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "client = DagsterGraphQLClient(\"localhost\", port_number=3000)\n",
     "\n",
     "# Wait for the job to complete\n",
@@ -79,8 +80,7 @@
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error while waiting for job completion: {e}\")\n",
-    "    raise\n",
-    "\n"
+    "    raise"
    ]
   },
   {
@@ -111,8 +111,8 @@
    "outputs": [],
    "source": [
     "# Config for diabetes-model-server\n",
-    "%env MODEL_SERVER_URL=http: // localhost:7000\n",
-    "%env MODEL_NAME=mlflow-model"
+    "%env MODEL_SERVER_URL=http://localhost:7000\n",
+    "%env MODEL_NAME=diabetes-model"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "docker-compose up -d diabetes-model-server\n"
+    "docker-compose up -d mlflow-diabetes-model"
    ]
   },
   {
@@ -176,6 +176,18 @@
    "source": [
     "%%bash\n",
     "\n",
+    "curl -f -s  http://localhost:7000/v2/models/diabetes-model/ready && echo \"Ready\" || echo \"Not ready\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
     "curl -X POST -s \"${MODEL_SERVER_URL}/v2/models/${MODEL_NAME}/infer\" \\\n",
     "     -H \"Content-Type: application/json\" \\\n",
     "     -d '{\n",
@@ -196,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,22 +241,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "##### Force model unload/load with curl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "curl -s  -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/unload\"\n"
    ]
   },
   {
@@ -256,12 +256,24 @@
    "source": [
     "%%bash\n",
     "\n",
+    "curl -s  -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/unload\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
     "curl -s -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/load\" | jq\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "Check model status with repository index call"
@@ -270,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "#### Using Custom docker container model-server"
@@ -292,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
