--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -112,16 +112,14 @@
    "id": "5",
    "metadata": {},
    "source": [
-    "#### Setup for Seldom MLflow custom model server"
+    "#### Setup for Dagster built MLflow container"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Config for diabetes-model-server\n",
@@ -130,20 +128,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "docker-compose up -d mlflow-diabetes-model"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "source": [
     "### Setup for Seldom mlserver"
@@ -152,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,10 +161,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "source": [
     "### Calls to server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "curl -f -s  \"${MODEL_SERVER_URL}/v2/models/diabetes-model/ready\" && echo \"Ready\" || echo \"Not ready\"\n"
    ]
   },
   {
@@ -189,8 +187,18 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "\n",
-    "curl -f -s  http://localhost:7000/v2/models/diabetes-model/ready && echo \"Ready\" || echo \"Not ready\"\n"
+    " -H \"Content-Type: application/json\" \\\n",
+    "  -d '{\n",
+    "        \"dataframe_split\": {\n",
+    "            \"columns\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"],\n",
+    "            \"data\": [\n",
+    "                [0.038076, 0.050680, 0.061696, 0.021872, -0.044223, -0.034821, -0.043401, -0.002592, 0.019907, -0.017646],\n",
+    "                [-0.001882, 0.352598, -0.170647, 0.190409, 0.273711, -0.024980, -0.091299, 0.042257, -0.049390, -0.092804]\n",
+    "            ]\n",
+    "        }\n",
+    "      }' \\\n",
+    "  | jq\n",
+    "\n"
    ]
   },
   {
@@ -231,31 +239,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "curl -s -X POST ${MODEL_SERVER_URL}/invocations \\\n",
-    " -H \"Content-Type: application/json\" \\\n",
-    "  -d '{\n",
-    "        \"dataframe_split\": {\n",
-    "            \"columns\": [\"age\", \"sex\", \"bmi\", \"bp\", \"s1\", \"s2\", \"s3\", \"s4\", \"s5\", \"s6\"],\n",
-    "            \"data\": [\n",
-    "                [0.038076, 0.050680, 0.061696, 0.021872, -0.044223, -0.034821, -0.043401, -0.002592, 0.019907, -0.017646],\n",
-    "                [-0.001882, 0.352598, -0.170647, 0.190409, 0.273711, -0.024980, -0.091299, 0.042257, -0.049390, -0.092804]\n",
-    "            ]\n",
-    "        }\n",
-    "      }' \\\n",
-    "  | jq\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "source": [
     "##### Force model unload/load with curl"
@@ -264,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "source": [
     "Check model status with repository index call"
@@ -296,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "source": [
     "#### Using Custom docker container model-server"
@@ -318,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
