--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -187,6 +187,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
+    "curl -s -X POST ${MODEL_SERVER_URL}/invocations \\\n",
     " -H \"Content-Type: application/json\" \\\n",
     "  -d '{\n",
     "        \"dataframe_split\": {\n",
