add python calls

--- a/src/notebooks/02-diabetes-model.ipynb
+++ b/src/notebooks/02-diabetes-model.ipynb
@@ -614,7 +614,14 @@
     "%%bash\n",
     "[ \"$SKIP_INFERENCE\" = true ] && echo \"SKIP: $SKIP_INFERENCE\" && exit 0\n",
     "\n",
-    "docker-compose up -d mlserver\n"
+    "export MODEL_VERSION=$(curl -s -X GET \"http://localhost:5000/api/2.0/mlflow/registered-models/alias?name=diabetes-model&alias=dev\" \\\n",
+    "    | jq -r '.model_version.version')\n",
+    "\n",
+    "echo \"Model version: $MODEL_VERSION\"\n",
+    "\n",
+    "echo \"Restarting docker with latest version\"\n",
+    "\n",
+    "docker-compose --profile model-server up -d  --force-recreate mlflow-diabetes-model\n"
    ]
   },
   {
