--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -100,16 +100,79 @@
   {
    "cell_type": "markdown",
    "id": "4",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Testing calls to model server"
+    "## Testing python calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "\n",
+    "model_server_url = \"http://localhost:7000\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = datasets.load_diabetes()\n",
+    "\n",
+    "diabetes_result = pd.DataFrame(dataset[\"data\"], columns=dataset[\"feature_names\"])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "Make prediction for all rows in a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "response = requests.post(\n",
+    "    f\"{model_server_url}/invocations\",\n",
+    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": diabetes_result.values.tolist()}},\n",
+    ")\n",
+    "response_data = response.json()\n",
+    "# print(json.dumps(response_data, indent=4))\n",
+    "\n",
+    "diabetes_result_with_predictions = diabetes_result.copy()\n",
+    "diabetes_result_with_predictions[\"predictions_response\"] = response_data[\"predictions\"]\n",
+    "\n",
+    "diabetes_result_with_predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Testing API calls to model server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
    "metadata": {},
    "source": [
     "#### Setup for Dagster built MLflow container"
@@ -118,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "12",
    "metadata": {},
    "source": [
     "### Setup for Seldom mlserver"
@@ -138,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "15",
    "metadata": {},
    "source": [
     "### Calls to server"
@@ -170,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "20",
    "metadata": {},
    "source": [
     "##### Force model unload/load with curl"
@@ -250,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "23",
    "metadata": {},
    "source": [
     "Check model status with repository index call"
@@ -282,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "25",
    "metadata": {},
    "source": [
     "#### Using Custom docker container model-server"
@@ -304,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
